[gd_scene load_steps=6 format=2]

[ext_resource path="res://img/插画/clock tower.png" type="Texture" id=1]
[ext_resource path="res://theme/button.tres" type="StyleBox" id=2]
[ext_resource path="res://theme/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://script/title.gd" type="Script" id=4]
[ext_resource path="res://music/游戏界面.mp3" type="AudioStream" id=5]

[node name="title" type="Node2D"]
script = ExtResource( 4 )

[node name="ClockTower" type="Sprite" parent="."]
modulate = Color( 0.968627, 0.980392, 1, 1 )
position = Vector2( 509.111, 288.5 )
scale = Vector2( 3.21667, 3.21667 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="button" type="Node2D" parent="."]
position = Vector2( 0, -16 )

[node name="play" type="Button" parent="button"]
margin_left = 25.0
margin_top = 50.0
margin_right = 334.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "开始游戏"

[node name="developer" type="Button" parent="button"]
margin_left = 25.0
margin_top = 154.0
margin_right = 334.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "开发者们"

[node name="exit" type="Button" parent="button"]
margin_left = 25.0
margin_top = 471.0
margin_right = 334.0
margin_bottom = 547.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "退    出"

[node name="return" type="Button" parent="button"]
margin_left = 973.0
margin_top = 471.0
margin_right = 1282.0
margin_bottom = 547.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "返    回"

[node name="massage" type="Node2D" parent="."]
position = Vector2( 950, 14 )

[node name="Label" type="Label" parent="massage"]
margin_top = -26.0
margin_right = 491.0
margin_bottom = 603.0
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = ExtResource( 3 )
text = "策划: sudopacman(陈诺)
顾问: 机器人WBW
主美: 园丁
程序: chrix
插画: 猫,壁炉与小木屋
UI: 天风
音乐(音效): 嘉期reunion
音乐: Yuan Han"

[connection signal="button_down" from="button/play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="button/developer" to="." method="_on_developer_button_down"]
[connection signal="button_down" from="button/exit" to="." method="_on_exit_button_down"]
[connection signal="button_down" from="button/return" to="." method="_on_return_button_down"]
